--- a/homepage.css
+++ b/homepage.css
@@ -40,7 +40,7 @@
 .notemptydiv{
     height: 70%;
     width: 100%;
-    background-color: rgb(124, 119, 119);
+    /* background-color: rgb(124, 119, 119); */
     position: relative;
     top: 0;
     left: 0;
@@ -96,4 +96,30 @@
     font-weight: bold;
     /* color: #000000; */
     text-align: center;
+}
+.formatentry{
+    position: absolute;
+    top:40px;
+    width: 70%;
+    height: 40px;
+    display: flex;
+    flex-direction: column;
+    /* gap:2px */
+    display: none;
+    transition: transform 0.5s 0s ease;
+    
+
+}
+.formatentrytype{
+    text-align: center;
+    /* border: 1px solid #000000; */
+    margin: 0.5px 0 ;
+    background-color: #11d8a3;;
+    padding: 5px 0;
+}
+.formatentrytype:hover{
+    background-color: #00906D;
+    cursor: pointer;
+    color:#ffffff;
+    transition: 0.5 ease;
 }
