--- a/bookform.css
+++ b/bookform.css
@@ -8,7 +8,6 @@
 
 body {
     font-family: 'Poppins', sans-serif;
-    border: 1px solid red;
 }
 
 
@@ -85,8 +84,21 @@ input[type=text]:focus {
 }
 
 #add-author {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    background-color: #747676;
+    color: white;
     margin-top: 5px;
     margin-left: 100px;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#add-author:hover {
+    background-color: #00906D;
 }
 
 .author-list {
@@ -118,6 +130,14 @@ input[type=text]:focus {
     width: 65px;
 }
 
+.horizontal-line-book {
+    background-color: #ECE5E5;
+    height: 1.5px;
+    border: none;
+    margin-left: -20px;
+    width: 365px;
+}
+
 /* select collection */
 .select-collection, .select-citation-format {
     display: flex;
@@ -140,15 +160,21 @@ input[type=text]:focus {
     flex-direction: column;
     position: absolute;
     text-align: center;
-    /* border: 1px solid #000000; */
     margin: 0.5px 0 ;
-    background-color: #11d8a3;;
+    background-color: #11d8a3;
+    border-radius: 5px;
     padding: 5px 0;
     left: 100px;
-    width: 100px;
-    top: 25px;
+    width: 210px;
+    top: 30px;
     z-index: 5;
     cursor: pointer;
+    color: white;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+}
+
+.citation-collections > *:hover, .citation-formats> *:hover, .add-to-collection:hover {
+    background-color: #04674c;
 }
 
 /* add to collection button */
@@ -159,10 +185,40 @@ input[type=text]:focus {
     border: none;
     border-radius: 2px;
     padding: 8px 16px;
-    width: 50%;
+    width: 100%;
 }
 
 .publisher, .edition, .volume {
     display: flex;
     align-items: center;
+}
+
+/* preview section */
+.preview {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-top: 1.5px dashed #B4B4B4;
+    background-color: #DEDEDE;
+    width: 350px;
+    height: 50px;
+    padding: 12px 16px;
+    margin-left: -12px;
+}
+
+.copy-preview {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    border-radius: 5px;
+    padding: 4px 8px;
+    border: none;
+    background-color: #11d8a3;
+    color: white;
+    cursor: pointer;
+}
+
+.copy-preview:hover {
+    background-color: #04674c;
 }
